# photo-curator

./: .gitignore  CLAUDE.md  MasterDoc.md  pyproject.toml
.claude/: settings.local.json
src/photo_curator/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  manifest.py  metadata.py  models.py  mover.py  pipeline.py  resolver.py  scanner.py  undo.py
src/photo_curator/matching/: base.py  content_hash.py  filename_size.py  registry.py
tests/: conftest.py  test_manifest.py  test_matching.py  test_metadata.py  test_mover.py  test_pipeline.py  test_resolver.py  test_scanner.py  test_undo.py
