[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-curator"
version = "0.2.0"
description = "CLI tool to curate photo and video archives"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Cicero Furini"},
]

[project.scripts]
photo-curator = "photo_curator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
